--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,6 @@ ETHERSCAN_API_KEY=
 INFURA_API_KEY=
 PRIVATE_KEY=
 
-testERC20Deposit=true
-testERC20Withdraw=true
-testMessageTest=true
+testERC20Deposit=1
+testERC20Withdraw=1
+testMessageTest=1
